@@ -1,5 +1,10 @@
 2005-08-27  Erez Zadok  <ezk@cs.sunysb.edu>
 
+	* libamu/xutil.c: debug_flags should always be initialized to
+	D_CONTROL (amq,daemon,fork).
+	(debug_option): allow setting initial immutable debug_flags via
+	amd.conf; afterward, prevent it (i.e., one tries it via "amq -D").
+
 	* Makefile.am (DISTCLEANFILES): also remove amu_autofs_prot.h,
 	config.cache.old, and dbgcf.h on "make distclean".
 	(CLEANFILES): remove dbgcf on plain "make clean".
